1.18-4.0.0:
- First release in 1.18

1.16-3.1.7:
- Fixed crash when linking the charged porter on a server
- Fixed a bug where the environmental controller only started working as soon as something like the radius is changed

1.16-3.1.6:
- Big fixes on the crafter. It works much cleaner now, will actually remember recipes and works properly with JEI (instead of only now and then)
- The matter transmitter and receiver private modes now work correctly even if the receiver and/or transmitter is in another dimension

1.16-3.1.5:
- Added a new 'cleanupreceivers' command that you can use to clean up receivers that no longer exist. This can be used after removing a dimension to get rid of the destination in the dialer

1.16-3.1.4:
- Updated to latest version of McJtyLib
- Fixed a few bugs in the matter booster en destination analyzer
- Made the timer and sequencer integer inputs less annoying to edit
- The tablet also works on the creative screen now
- Added TOP support for spawner
- Fixed tooltips for matter receiver and transmitter

1.16-3.1.3:
- Fixed the peaceful module in the environmental controller

1.16-3.1.2:
- Fixed the sensor and environmental controller to consider more mobs as passive (like villagers)

1.16-3.1.1:
- Fixed a crash with the environmental controller which could cause crashes for non living entities (i.e. arrows or items)
- Fixed the 'noteleport' module in the environmental controller. It wouldn't actually do anything. Now it prevents enderman and shulkers as well as enderpearls

1.16-3.1.0:
- Ported the environmental controller (WIP)

1.16-3.0.26:
- Fixed integration between RFTools Control and RFTools Storage for the screen modules

1.16-3.0.25:
- The matter receiver and transmitter are now actually infusable

1.16-3.0.24:
- Fixed a problem with a potential crash in the matter receiver

1.16-3.0.23:
- The Analog works again

1.16-3.0.22:
- Fixed a bug in the simple dialer. It would not remember settings
- Fixed the tooltip for the Syringe