@@ -1,3 +1,6 @@
+Upcoming:
+- Small fix for recipe manager
+
 1.18-4.0.0:
 - First release in 1.18
 
